# cgm

./: .eslintrc.json  .gitignore  LICENSE  README.md  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: cgm_tests.yml  gh-pages.yml  publish_to_pypi.yml
cgm/: __init__.py  _format.py  _utils.py  core.py  example_graphs.py  inference.py  io.py  sample_graphs.py
cgm/inference/: __init__.py  belief_propagation.py  forward_sampling.py  variable_elimination.py  variational.py
cgm/inference/approximate/: sampling.py
cgm/inference/exact/: elimination.py
cgm/viz/: __init__.py  app.py  models.py  routes.py  state.py  viz-design.md  viz-variational-design.md
cgm/viz/static/: index.html  viz-layout.html
cgm/viz/static/css/: base.css  cpd-table-styles.css  graph-styles.css  panel-styles.css  plot-styles.css  sampling-controls.css  viz-styles.css
cgm/viz/static/js/: sampling-controls.js  test.js  types.ts  viz-graph.js
cgm/viz/static/js/components/: graph-visualization.ts  plot-manager.ts  plot.ts
cgm/viz/static/js/src/: main.ts  types.ts
cgm/viz/static/js/src/components/: graph-visualization.ts  panel-manager.ts  plot-manager.ts  plot.ts  sampling-controls.ts
cgm/viz/static/js/src/utils/: graph-utils.ts
docs/: conf.py  core.md  factor_operations.md  getting_started.md  index.md  inference.md  modules.md  panel-system-redesign.md  source_code.md  usage.md
manual_tests/: README.md  __init__.py
manual_tests/viz/: __init__.py  visual_inspection.py
src/cgm/: __init__.py  core.py  example_graphs.py
src/cgm/inference/: __init__.py  belief_propagation.py  forward_sampling.py  variable_elimination.py
tests/: context.py  core_tests.py  inference_tests.py  test_core.py  test_inference.py  test_inference_exact.py  test_inference_sampling.py  test_inference_variational.py  test_io.py
tests/viz/: conditioning.py  test_api.py  test_conditioning.py  test_frontend.js
